--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
       "last 1 safari version"
     ]
   },
-  "webpage": "http://jarOfSand.github.io/React-Deploy",
+  "homepage": "http://jarOfSand.github.io/React-Deploy",
   "devDependencies": {
     "gh-pages": "^3.1.0"
   }
